<resources>
    <string name="app_name">Saver</string>
    <string name="action_settings">Settings</string>
    <string name="app_main_label">Saver</string>
    <string name="btn_label_Show_Details">Show Detail</string>
    <string name="add">ADD</string>
    <string name="cancel">Cancel</string>
    <string name="NoteDeleteStudent">Don\'t Left Field Empty</string>
    <string name="AddGoal">Add Goal</string>
    <string name="update_goal">Update Goal</string>
    <string name="delete_goal">Delete Goal</string>
    <string name="Delete_goal">Delete Goal</string>
    <string name="goal_id">Goal ID</string>
    <string name="don_t_leave_this_field_empty">Don\'t Leave this field empty</string>
    <string name="sum">Sum</string>
    <string name="goal_name">Goal Name</string>
    <string name="description">Description</string>
    <integer name="fade_in_duration">5000</integer>
    <integer name="fade_in_from_left_duration">5000</integer>
    <string name="btnLabel_delete">DELETE</string>
    <string name="tv_Update">UPDATE</string>
    <string name="sum_saved">Sum Saved</string>
    <string name="logo_detailActivity">Logo</string>

</resources>
